--- a/scss/elements/containers.scss
+++ b/scss/elements/containers.scss
@@ -84,11 +84,11 @@
     }
 
     &.is-center {
-      align-items: center;
+      text-align: center;
     }
 
     &.is-right {
-      align-items: right;
+      text-align: right;
     }
   }
 
